refactored and added graphics